# nutstore-cli

./: .gitignore  .gitmodules  .nutstore.config.example  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  docker-compose.yaml  requirements.txt  run.py  setup.cfg  setup.py
cli/: __init__.py  cli.py  context.py  execution.py
client/: __init__.py  exceptions.py
docs/: tutorial.md
nutstore_cli/: __init__.py  __main__.py  cli.py  command_help.py  completer.py  config.py  context.py  execution.py
nutstore_cli/client/: __init__.py  base.py  client.py  exceptions.py  file.py  path_helper.py  road.py  utils.py
nutstore_cli/easywebdav/: __init__.py  __version__.py  client.py
nutstore_cli/utils/: __init__.py  codecs.py  echo.py  format.py  functional.py  output.py
tests/: __init__.py  test_client.py  test_file.py  test_grammar.py
tests/raw/: two_files.pickle
