[wheel]
universal = 1

[metadata]
name = nutstore-cli
url = https://github.com/Kxrr/nutstore-cli
version = 0.1.3
author = Kxrr
author-email = hi@kxrr.us
description = A command-line interface for NutStore based on WebDAV.
description-file = README.md
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Terminals
    Programming Language :: Python
    Programming Language :: Python :: 2.7
keywords =
    nutstore
    jianguoyun
    cli
dependency-links =
    git+https://github.com/Kxrr/easywebdav.git#egg=easywebdav-1.2.2

[entry_points]
console_scripts =
    nutstore-cli = nutstore_cli.cli:cli
